src/components/Switch/switch.scss
.vui-switch {
  --switch-size: 24px;

  &.checked {
    .vui-switch-icon .vui-switch-indicator {
      left: calc(100% - 24px);
      background-color: var(--color-text);
    }

    &.accent .vui-switch-icon .vui-switch-indicator {
      background-color: var(--color-accent);
    }
  }

  &.disabled {
    .vui-switch-icon {
      opacity: 0.5;
      cursor: not-allowed;
      filter: grayscale(100%);
    }

    input + label .vui-switch-content {
      opacity: 0.5;
      cursor: not-allowed;
    }
  }

  &.reversed {
    width: 100%;

    input + label {
      grid-template-columns: 1fr 44px;

      .vui-switch-icon {
        order: 1;
      }
    }
  }

  .vui-hint {
    display: block;
    margin-top: var(--space-xxs);
    margin-bottom: 0;
  }

  .vui-switch-icon {
    width: 44px;
    height: var(--switch-size);
    border-radius: var(--border-radius-pill);
    background-color: var(--color-bg-raised);
    position: relative;
    cursor: pointer;

    .vui-switch-indicator {
      display: block;
      position: absolute;
      left: 2px;
      top: 2px;
      width: 20px;
      height: 20px;
      border-radius: var(--border-radius-pill);
      background-color: var(--color-text-lighter);
      transition: var(--transition);
    }
  }

  input {
    width: 1px;
    height: 1px;
    position: absolute;
    overflow: hidden;
    outline: none !important;
    opacity: 0;

    &:focus-visible + label .vui-switch-icon {
      outline: var(--outline);
    }

    & + label {
      display: grid;
      grid-template-columns: 44px 1fr;
      gap: 10px;
      font-size: var(--font-size-m);
      color: var(--color-text);
      user-select: none;
      cursor: pointer;

      .vui-switch-content {
        display: block;

        &:is(p) {
          height: auto;
          line-height: var(--line-height-base);
          // height: var(--switch-size);
          // line-height: var(--switch-size);
          font-size: var(--font-size-m);
        }
      }
    }
  }
}

:root.light {
  .vui-switch .vui-switch-icon .vui-switch-indicator {
    background-color: var(--color-bg-lowered);
  }

  .vui-switch.checked.accent .vui-switch-icon .vui-switch-indicator {
    background-color: var(--color-accent);
  }

  .vui-switch.checked .vui-switch-icon .vui-switch-indicator {
    background-color: var(--color-text);
  }
}

